--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,9 +1,7 @@
 project_name: gobis-server
 
 builds:
-  -
-    &template
-    id: binary
+  - id: binary
     binary: gobis-server
     env:
       - CGO_ENABLED=0
