--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -20,9 +20,9 @@ jobs:
           fetch-depth: 0
 
       - name: set up go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.22
+          go-version: "1.22"
 
       - name: cache go modules
         uses: actions/cache@v4
